--- a/_config.yml
+++ b/_config.yml
@@ -39,14 +39,18 @@ meta:
 plugins:
   - jekyll-feed
   - jekyll-org
+  - jekyll-autoprefixer
 
 exclude:
   - updategitinfo.sh
 
-permalink: 
 defaults:
   - scope:
       path: ""
       type: "posts"
     values:
       permalink: /blog/:year/:slug/
+
+autoprefixer:
+  browsers:
+    - last 2 versions
