--- a/_config.yml
+++ b/_config.yml
@@ -54,3 +54,15 @@ defaults:
 autoprefixer:
   browsers:
     - last 2 versions
+
+collections:
+  projects:
+    rss_feed: true
+    output: true
+  books_read:
+    rss_feed: true
+
+feed:
+  collections:
+    projects:
+      path: "/projects/feed.xml"
