--- a/.github/actions/build-dist-site/Dockerfile
+++ b/.github/actions/build-dist-site/Dockerfile
@@ -2,6 +2,10 @@ FROM ruby:2.6.5-buster
 LABEL author="Gueorgui Tcherednitchenko"
 LABEL version="1.0.0"
 
+ENV LC_ALL C.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US.UTF-8
+
 ENV BUNDLER_VERSION 2.0.2
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
