change: Use PERSONAL_TOKEN instead

--- a/.github/actions/build-dist-site/Dockerfile
+++ b/.github/actions/build-dist-site/Dockerfile
@@ -10,7 +10,7 @@ ENV BUNDLER_VERSION 2.0.2
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
     nodejs \
-    git-all \
+    git \
     && gem install bundler:2.0.2 \
     && bundle config --global silence_root_warning 1
 
