--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -15,7 +15,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/build-dist-site
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           GITHUB_REPOSITORY: $
           GITHUB_ACTOR: $
