change: Update social links

--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,8 @@ timezone: Europe/London
 meta:
   theme_color: "#000"
   twitter_card_type: "summary"
-  twitter: "goshaphoto"
-  github_username: "gueorgui"
-  mastodon: "https://merveilles.town/@gueorgui"
+  twitter: "goshatch"
+  github_username: "goshatch"
   default_social_image: "/assets/images/projects/where-the-story-begins/featured.jpg"
 
 # Build settings
