--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Gueorgui Tcherednitchenko
-author: Gueorgui Tcherednitchenko
+title: Gosha Tcherednitchenko
+author: Gosha Tcherednitchenko
 email: mail@gosha.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Photography, design, writing, and software projects by Gueorgui Tcherednitchenko
+  Photography, design, writing, and software projects by Gosha Tcherednitchenko
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://gosha.net # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
