--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ meta:
   theme_color: "#000"
   twitter_card_type: "summary"
   twitter: "goshatch"
+  mastodon: "@gosha@merveilles.town"
   github_username: "goshatch"
   default_social_image: "/assets/images/projects/where-the-story-begins/featured.jpg"
 
@@ -54,7 +55,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      permalink: /blog/:year/:slug/
+      permalink: /:year/:slug/
 
 autoprefixer:
   browsers:
