feat(footer): add to the lyrics collection

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -26,3 +26,6 @@
 - Designed and directed by his red right hand
 - It’s hard, but it’s harder to ignore it
 - From the moment I could talk I was ordered to listen
+- Sorrow found me when I was young
+- It’s funny how the music putting times in perspective
+- We’re going to skate to one song and one song only
