--- a/.build.yml
+++ b/.build.yml
@@ -1,8 +1,8 @@
 image: alpine/edge
 secrets:
 - 821cf89d-a5e2-45e0-8431-1cf5de13c32d
+- 69657a19-c936-4d94-89e4-131206a5893c
 - cbe41c27-8296-4f78-969d-0f65de96c898
-- 75f1453a-7f9a-40ad-b0f8-d5d695bd7779
 packages:
 - ruby
 - ruby-dev
@@ -21,4 +21,4 @@ tasks:
     sudo bundle exec jekyll build
 - deploy: |
     cd $site/build
-    rsync -Pvrthl --delete --info=progress2 . bubundel:/var/www/gosha.net
+    rsync -rvlh --delete . bubundel:/var/www/gosha.net
