feat(footer): more lyrics

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -29,3 +29,8 @@
 - Sorrow found me when I was young
 - It’s funny how the music putting times in perspective
 - We’re going to skate to one song and one song only
+- I’m standing by the window where the light is strong
+- Everybody knows the good guys lost
+- After the havoc that I’m gonna wreak
+- Hey, don’t write yourself off yet
+- Как мамина рука, как папино трико
