feat(footer): more lyrics
Atmosphere - The Best Day

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -34,3 +34,4 @@
 - After the havoc that I’m gonna wreak
 - Hey, don’t write yourself off yet
 - Как мамина рука, как папино трико
+- I had a rough day, but that's life, it happens
