--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -35,3 +35,5 @@
 - Hey, don’t write yourself off yet
 - Как мамина рука, как папино трико
 - I had a rough day, but that's life, it happens
+- …which I don’t pretend to understand at all
+- I’m guided by the beauty of our weapons
