feat(lyrics): Maui

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -37,3 +37,4 @@
 - I had a rough day, but that's life, it happens
 - …which I don’t pretend to understand at all
 - I’m guided by the beauty of our weapons
+- What can I say, except “you're welcome”?
