--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -38,3 +38,4 @@
 - …which I don’t pretend to understand at all
 - I’m guided by the beauty of our weapons
 - What can I say, except “you're welcome”?
+- And all secluded freaks, they are still trying, trying
