feat(lyrics): luv(sic) hexalogy

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -39,3 +39,5 @@
 - I’m guided by the beauty of our weapons
 - What can I say, except “you're welcome”?
 - And all secluded freaks, they are still trying, trying
+- A little bit wiser, a whole lot tougher
+- I must tell you that you lived beautifully
