--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -41,3 +41,4 @@
 - And all secluded freaks, they are still trying, trying
 - A little bit wiser, a whole lot tougher
 - I must tell you that you lived beautifully
+- First in, last out
