feat(lyrics): victory

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -42,3 +42,4 @@
 - A little bit wiser, a whole lot tougher
 - I must tell you that you lived beautifully
 - First in, last out
+- Victory comes in small packages
