feat(lyrics): k-pop goes brrr

--- a/_data/lyrics.yml
+++ b/_data/lyrics.yml
@@ -45,3 +45,9 @@
 - Victory comes in small packages
 - 友だちたくさん、嬉しいなぁ
 - The only light we see is from the screens
+- HUNTR/X don't miss
+- Knocking you out like a lullaby
+- Fit check for my napalm era
+- We're goin' up, up, up, it's our moment
+- Can I get the mic a little higher?
+- Look up in the sky it's a bird it's a plane
